--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <div class="text-hero">
                   
                 <h2>Ingineria</h2>
-                <h3>Ingineria reprezintă aplicarea cunoștințelor științifice, matematice și a experienței practice pentru a crea obiecte și procese utile[1] pentru a rezolva probleme tehnice, de creștere eficientă a productivității și subdomenii care includ proiectarea și îmbunătățirea infrastructurii, mașinilor, vehiculelor, electronicelor, materialelor și sistemelor energetice[2]. Persoanele ce se ocupă cu ingineria sunt numite ingineri.
+                <h3>Ingineria reprezintă aplicarea cunoștințelor științifice, matematice și a experienței practice pentru a crea obiecte și procese utile pentru a rezolva probleme tehnice, de creștere eficientă a productivității și subdomenii care includ proiectarea și îmbunătățirea infrastructurii, mașinilor, vehiculelor, electronicelor, materialelor și sistemelor energetice. Persoanele ce se ocupă cu ingineria sunt numite ingineri.
 
-Ingineria este aplicarea cunoașterii științifice, economice, sociale, practice asupra realității materiale și/sau sociale în vederea proiectării, executării, întreținerii, modificării unor structuri și/sau ansamble care să fie capabile să furnizeze/genereze rezultate, produse, procese și/sau efecte predefinite și/sau conforme unor așteptări predictibile și/sau controlabile.</h3>
+Ingineria este aplicarea cunoașterii științifice, economice, sociale, practice asupra realității materiale și sociale în vederea proiectării, executării, întreținerii, modificării unor structuri sau ansamble care să fie capabile să furnizeze/genereze rezultate, produse, procese și efecte predefinite și/sau conforme unor așteptări predictibile sau controlabile.</h3>
                
             </div>
             </figure>
@@ -324,3 +324,4 @@ oportunități internaționale (agenții spațiale, companii globale).
 </body>
 
 </html>
+
